Bug 140980 - EDITING Comment looks deleted when changes in margin mode is activated
Summary: EDITING Comment looks deleted when changes in margin mode is activated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: tracked-changes-in-margin
  Show dependency treegraph
 
Reported: 2021-03-12 12:05 UTC by NISZ LibreOffice Team
Modified: 2021-03-18 15:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The attachment #139963 with a new comment added on a deleted word. (29.85 KB, image/png)
2021-03-12 12:05 UTC, NISZ LibreOffice Team
Details
attachment #139963 after enabling deletions-in-margin mode (30.52 KB, image/png)
2021-03-12 12:06 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-03-12 12:05:40 UTC
Created attachment 170436 [details]
The attachment #139963 [details] with a new comment added on a deleted word.

This is a followup to bug #115815
When a comment is added to a range of deleted text and deletions-in-margin mode is activated the comment becomes crossed out

Steps to reproduce:
    1. Open attachment #139963 [details]
    2. Select the deleted word “Bilal” and add a comment on it.
    3. In the Track Changes toolbar turn on the Deletion on Margins mode
       
Actual results:
When the Deletion on Margins mode is enabled, the new comment is marked as deleted (crossed out), but when it is disabled the comment is seen as not deleted.

Expected results:
Comment does not change.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2fb274950e5207ca55f4f52325fb522bd44024e1
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-03-12 12:06:04 UTC
Created attachment 170437 [details]
attachment #139963 [details] after enabling deletions-in-margin mode
Comment 2 Commit Notification 2021-03-18 15:33:29 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31442054520cf0a263cc17e157cfa102cff8ef6a

tdf#140980 sw: fix bad strikethrough of annotations

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.