tdf#140980 sw: fix bad strikethrough of annotations

Not deleted annotation windows got a bad strikethrough
in ChangesInMargin mode, if they annotate tracked
deletions.

Also clean-up commit a001a66ba27e2fe9a485388869d53f001f2b09af
(tdf#140982 sw ChangesInMargin: fix annotation ranges).

Change-Id: I06cb88113bf038c09702b6ef33e46c94c963730d